change src path.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       '//cdn.jsdelivr.net/npm/bluebird@3.5.3/js/browser/bluebird.min.js'
     )
   }
-  insertScript('../sugly.js')
+  insertScript('/sugly.js')
 })())
 </script>
 </html>
