us pt instead of px;

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <ul id="stdout-panel" class="stdout">
   </ul>
   <div class="stdin">
-    <div id="stdin-prompt">&gt;</div>
+    <span id="stdin-prompt">&gt;</span>
     <input type="text" id="stdin-input" autocomplete="off" value=""/>
     <input type="button" id="stdin-enter" value="&#x23ce;" />
   </div>
