--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Sugly Shell | Sugly.DEV</title>
-  <link href="index.css" rel="stylesheet" type="text/css">
+  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
   <ul id="stdout-panel" class="stdout">
