use minimized js bundle.

--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
     window.SUGLY_HOME = href.substring(0, href.lastIndexOf('/'))
   })())
   </script>
-<script type="text/javascript" src="sugly.js"></script></body>
+<script type="text/javascript" src="sugly.min.js"></script></body>
 </html>
