--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>Sugly Shell | Sugly.DEV</title>
+  <title>Espresso Web Shell | eslang.dev</title>
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
@@ -28,8 +28,8 @@
     )
 
     var href = window.location.href
-    window.SUGLY_HOME = href.substring(0, href.lastIndexOf('/'))
+    window.ES_HOME = href.substring(0, href.lastIndexOf('/'))
   })())
   </script>
-<script type="text/javascript" src="sugly.js"></script></body>
+<script type="text/javascript" src="eslang.js"></script></body>
 </html>
