upgrade to 1.0.12-prerelease

--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
     window.ES_HOME = href.substring(0, href.lastIndexOf('/'))
   })())
   </script>
-<script type="text/javascript" src="eslang.js"></script></body>
+<script type="text/javascript" src="eslang.min.js"></script></body>
 </html>
