--- a/index.html
+++ b/index.html
@@ -1,24 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-<head>
-  <meta charset="utf-8">
-  <title>Espresso Web Shell | eslang.dev</title>
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-  <link rel="stylesheet" type="text/css" href="index.css">
-</head>
-<body>
-  <ul id="stdout-panel" class="stdout">
-  </ul>
-  <div class="stdin">
-    <span id="stdin-prompt">&gt;</span>
-    <input type="text" id="stdin-input" autocomplete="off" value=""/>
-    <input type="button" id="stdin-enter" value="&#x23ce;" />
-  </div>
-  <script>
-  ((function () {
+<!doctype html><html lang="en" dir="ltr"><head><meta charset="utf-8"><title>Espresso Web Shell | eslang.dev</title><link rel="shortcut icon" type="image/png" href="favicon.png"/><link rel="stylesheet" href="index.css"></head><body><ul id="stdout-panel" class="stdout"></ul><div class="stdin"><span id="stdin-prompt">&gt;</span> <input id="stdin-input" autocomplete="off" value=""/> <input type="button" id="stdin-enter" value="&#x23ce;"/></div><script>((function () {
     var href = window.location.href
     window.ES_HOME = href.substring(0, href.lastIndexOf('/'))
-  })())
-  </script>
-<script src="eslang.js"></script></body>
-</html>
+  })())</script><script src="eslang.min.js"></script></body></html>
